[package]
name = "squfof"
version = "0.2.0"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "Shanks's square forms factorization"
license = "AGPL-3.0-or-later"
documentation = "https://docs.rs/squfof/"
repository = "https://gitlab.com/Toru3/squfof"
readme = "README.md"
keywords = ["prime", "factorization", "factor"]
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
ring-algorithm = "0.4.0"
smallvec = "1.6.1"
[dev-dependencies]
rand = "0.8.4"
is-prime-for-primitive-int = "0.5.0"
